# pgcl-sample

./: Justfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts  wasm-pack-plugin.ts
.github/workflows/: deploy.yml
abstract/: Justfile  index.md  lit.bib
pgcl/: Cargo.toml  LICENSE_MIT  build.rs
pgcl/src/: ast.rs  ext.rs  fmt.rs  lib.rs  parse.rs  parser.rs  pgcl.lalrpop  pgcl.rs
src/: App.tsx  CodeEditor.tsx  Katex.tsx  Tree.tsx  common.tsx  hooks.tsx  semantics.ts  slides.tsx
src/assets/: github.tsx  lean_logo.tsx
src/slides/: s00.tsx  s01.tsx  s02.tsx  s03.tsx  s04.tsx  s05.tsx  s055.tsx  s06.tsx  s07.tsx  s08.tsx  s09.tsx  s10.tsx  s80.tsx  s85.tsx  s90.tsx  sIntro.tsx
