[package]
name = "pgcl"
version = "0.1.0"
authors = ["oeb25 <oliverboving@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
tsify = { version = "0.4.5", default-features = false, features = ["js"] }
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
once_cell = "1.19.0"
miette = "7.2.0"
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
itertools = "0.13.0"
tracing = "0.1.40"
tracing-wasm = "0.2.1"
logos = "0.14.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[build-dependencies]
lalrpop = "0.20.2"
